<resources>
    <string name="app_name">PSIManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="forgot_account_and_password">Forgot accountnumber/password</string>
    <string name="memorise_account_id">Keep Account ID</string>
    <string name="login">login</string>
    <string name="fastlogin">fastlogin</string>
    <string name="offlinelogin">offlinelogin</string>
    <string name="click_to_enter">click to enter</string>
    <string name="click">click</string>

    <string name="title_purchase">purchase</string>
    <string name="title_sales">sales</string>
    <string name="title_inventory">inventory</string>
    <string name="title_more">more</string>
    <string name="title_scrap">scrap</string>
    <string name="title_select_sales_items">Please select item and amount to sale</string>
    <string name="title_select_scrap_items">Please select item and amount to scrap</string>

    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="total_amount">total amount</string>
    <string name="scrap_all">SCRAP ALL</string>
    <string name="inventory_adjustment_and_scrap">inventory adjustment and scrap</string>


    title_dashboard

</resources>